fix(root page): footer height on small screen

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -9,7 +9,9 @@
   color: white;
   padding: 50px 0;
   font-size: $font-size-base;
-  height: $footer-height;
+  @media (min-width: $screen-sm-min) {
+    height: $footer-height;
+  }
 }
 
 .footer--fullscreen {
